# snd

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
c_src/: CMakeLists.txt  tui.c  tui.h
c_src/diskman/: CMakeLists.txt  diskman.c  diskman.h
c_src/tui/: CMakeLists.txt  tui.c
src/: cli.rs  main.rs  modes.rs  network.rs  types.rs  utils.rs
src/c/: diskman.rs  mod.rs  tui.rs
